# qt-update-notifier

./: BUILD_INSTRUCTIONS  CMakeLists.txt  README.md  changelog  check_updates.cpp  check_updates.h  checkoldpackages.cpp  checkoldpackages.h  configuredialog.cpp  configuredialog.h  configuredialog.ui  german_DE.qm  instance.cpp  instance.h  logwindow.cpp  logwindow.h  logwindow.ui  main.cpp  process.c  process.h  qt-update-notifier-start-synaptic.c  qt-update-notifier.pro  qt-update-notifier.pro.user.3.0-pre1  qt-update-notifier.pro.user.3.2-pre1  qtUpdateNotifier.cpp  qtUpdateNotifier.h  startsynaptic.cpp  startsynaptic.h  translations.ts  utility.cpp  utility.h
icons/: icons.qrc
src/: configuredialog.cpp  configuredialog.h  configuredialog.ui  ignorepackagelist.cpp  ignorepackagelist.h  ignorepackagelist.ui  instance.cpp  instance.h  logwindow.cpp  logwindow.h  logwindow.ui  main.cpp  networkAccessManager.hpp  process.c  process.h  qt-update-notifier-cli.c  qt-update-notifier-start-synaptic.c  qtUpdateNotifier.cpp  qtUpdateNotifier.h  settings.cpp  settings.h  statusicon.cpp  statusicon.h  task.cpp  task.h  twitter.cpp  twitter.h  twitter.ui  utility.cpp  utility.h
translations.qm/: catalan_SP.qm  czech_CS.qm  dutch_NL.qm  french_Fr.qm  german_DE.qm  greek_GR.qm  italian_IT.qm  polish_PL.qm  slovak_SK.qm  spanish_SP.qm
translations.ts/: catalan_SP.ts  czech_CS.ts  dutch_NL.ts  french_Fr.ts  german_DE.ts  greek_GR.ts  italian_IT.ts  polish_PL.ts  slovak_SK.ts  spanish_SP.ts  translations.ts
